--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,15 @@
+%% fail_on_warning,
+{erl_opts, [debug_info, {parse_transform, lager_transform}]}.
+
+{erl_opts, [warn_export_all,
+  warn_unused_import,
+  {i, "include"},
+  {src_dirs, ["src"]}]}.
+
+{sub_dirs, [
+  "rel",
+  "plugins/*/"]}.
+
 {
   deps,
   [
