--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,7 @@
   deps,
   [
     {esockd, "3.*", {git, "git://github.com/emqtt/esockd.git", {branch, "master"}}},
-    {mochiweb, "4.*", {git, "git://github.com/emqtt/mochiweb.git", {branch, "master"}}}
+    {mochiweb, "4.*", {git, "git://github.com/emqtt/mochiweb.git", {branch, "master"}}},
+    {amqp_client, ".*", {git, "git://github.com/jbrisbin/amqp_client.git", {tag, "rabbitmq-3.5.6"}}}
   ]
 }.
